@startuml database

hide circle
skinparam linetype ortho

entity Tune {
    * id: int <<generated>>
    * rhythmtype_id: int <<FK>>
    * tunemelody_id: int <<FK>>
    --
    **meta**
}

entity RhythmType {
    * id: int <<generated>>
    --
    * rhythm: text
    * is_public: bool
    * public_identifier: int

}

entity TuneMelody {
    * id: int <<generated>>
    --
    * melody: text[]
}

entity TuneVariation {
    * id: int <<generated>>
    * tune_id: int <<FK>>
    --
    * melody: text
    * rhythm: text
}

RhythmType ||--|{ Tune
TuneMelody ||--|| Tune
Tune ||--o{ TuneVariation

@enduml